[package]
name        = "ledge"
version     = "0.1.0"
edition     = "2021"
description = "Sovereign Audit Chain — SHA-256 hash-linked append-only event ledger"
license     = "MIT"
repository  = "https://github.com/SNAPKITTYWEST/DEVFLOW-FINANCE"
keywords    = ["audit", "worm", "merkle", "ledger", "fintech"]
categories  = ["cryptography", "data-structures"]

[lib]
name       = "ledge"
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2       = "0.10"
hex        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM bindings — enabled by `wasm-pack build --features wasm`
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm    = ["wasm-bindgen"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
